--- a/WeatherWithFriends/res/layout/fragment_main.xml
+++ b/WeatherWithFriends/res/layout/fragment_main.xml
@@ -8,9 +8,57 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.weatherwithfriends.MainActivity$PlaceholderFragment" >
 
+<!--     Swipe view for Heading -->
+	 <TabHost
+            android:id="@android:id/tabhost"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_above="@id/homeweather">
+
+	    <LinearLayout
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:orientation="vertical"
+	        android:padding="5dp" >
+
+	        <TabWidget
+	            android:id="@android:id/tabs"
+	            android:layout_width="fill_parent"
+	            android:layout_marginTop="20dp"
+	            android:layout_height="52dp" >
+	        </TabWidget>
+
+	        <FrameLayout
+	            android:id="@android:id/tabcontent"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent"
+	            android:padding="5dp" >
+
+	        	<ListView
+                    android:id="@+id/add"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" />
+
+	        	<ListView
+                    android:id="@+id/home"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" />
+	        	
+	        	<ListView
+                    android:id="@+id/social"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" />
+	        	
+            </FrameLayout>
+	    </LinearLayout>
+	</TabHost>
+	
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world" 
+        android:id="@+id/homeweather"/>
 
 </RelativeLayout>
