--- a/WeatherWithFriends/res/layout/home_fragment.xml
+++ b/WeatherWithFriends/res/layout/home_fragment.xml
@@ -6,7 +6,7 @@
       <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Home weather:"
+        android:text="Home weather"
         android:textSize="20dp"
         android:layout_centerInParent="true"/>
      
