--- a/WeatherWithFriends/res/layout/social_fragment.xml
+++ b/WeatherWithFriends/res/layout/social_fragment.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff8400" 
+    android:background="#e3dbca" 
     android:orientation="vertical" >
     
     <TextView android:layout_width="fill_parent"
