--- a/WeatherWithFriends/res/layout/home_fragment.xml
+++ b/WeatherWithFriends/res/layout/home_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#c0c7b1" >
+    android:background="#cce5e8" >
      
     <ImageView android:id="@+id/icon"
         android:layout_width="50dp"
@@ -11,6 +11,18 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
+    
+    <TextView android:id="@+id/temperature"
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:gravity="center"
+        android:textSize="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/icon" 
+        android:layout_centerInParent= "true"/>
+    
     
     <TextView android:id="@+id/location"
 	    android:layout_height="wrap_content"
@@ -20,7 +32,7 @@
         android:gravity="center"
         android:textSize="30dp"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/icon" 
+        android:layout_below="@id/temperature" 
         android:layout_centerInParent= "true"/>
     
     	
@@ -28,10 +40,11 @@
 	    android:layout_height="wrap_content"
 	    android:layout_width="wrap_content"
         android:gravity="center"
+        android:textSize="20dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="10dp"
         android:layout_below="@id/location" 
-        android:layout_centerInParent= "true"/>
+        android:layout_centerInParent= "true"/> 
 
 </RelativeLayout>
