--- a/WeatherWithFriends/res/layout/social_fragment.xml
+++ b/WeatherWithFriends/res/layout/social_fragment.xml
@@ -2,15 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e3dbca" 
+    android:background="#deeef0" 
     android:orientation="vertical" >
     
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Your friends' weather"
-        android:textSize="20dp"
-        android:layout_centerInParent="true"/>
-     
-
+   
+    
 </RelativeLayout>
