--- a/WeatherWithFriends/res/values/styles.xml
+++ b/WeatherWithFriends/res/values/styles.xml
@@ -14,7 +14,16 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+   		<item name="android:buttonStyle">@style/RobotoButtonStyle</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+    	<item name="android:fontFamily">sans-serif-light</item>
+	</style>
+
+	<style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
+    	<item name="android:fontFamily">sans-serif-light</item>
+	</style>
 </resources>
