--- a/WeatherWithFriends/res/layout/add_fragment.xml
+++ b/WeatherWithFriends/res/layout/add_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:orientation="vertical"
-    android:background="#97cad0" >
+    android:background="#b3d8dc" >
     
     <!-- first row -->
 	   <ImageView android:id="@+id/icon"
