--- a/WeatherWithFriends/res/layout/social_fragment.xml
+++ b/WeatherWithFriends/res/layout/social_fragment.xml
@@ -5,6 +5,8 @@
     android:background="#deeef0" 
     android:orientation="vertical" >
     
+    <ListView android:id="@+id/list" android:layout_width="wrap_content" android:layout_height="wrap_content">
+    </ListView>
    
     
 </RelativeLayout>
