Done for now. ARrayAdapter and Social fragment needs work. Where to get the icon image

--- a/WeatherWithFriends/res/layout/social_fragment.xml
+++ b/WeatherWithFriends/res/layout/social_fragment.xml
@@ -5,8 +5,9 @@
     android:background="#deeef0" 
     android:orientation="vertical" >
     
-    <ListView android:id="@+id/list" android:layout_width="wrap_content" android:layout_height="wrap_content">
-    </ListView>
-   
+    <ListView
+     android:id="@+id/list"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent" />
     
 </RelativeLayout>
