--- a/WeatherWithFriends/res/layout/social_fragment.xml
+++ b/WeatherWithFriends/res/layout/social_fragment.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#deeef0" 
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:layout_marginTop = "20dp">
     
     <ListView
      android:id="@+id/list"
