--- a/WeatherWithFriends/res/layout/home_fragment.xml
+++ b/WeatherWithFriends/res/layout/home_fragment.xml
@@ -5,6 +5,18 @@
     android:orientation="vertical"
     android:background="#cce5e8" >
      
+      
+    <TextView android:id="@+id/loading"
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent= "true"/>
+    
+    
     <ImageView android:id="@+id/icon"
         android:layout_width="50dp"
         android:layout_height="50dp"
