--- a/WeatherWithFriends/res/layout/home_fragment.xml
+++ b/WeatherWithFriends/res/layout/home_fragment.xml
@@ -12,6 +12,7 @@
 	    android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:gravity="center"
+        android:layout_marginBottom = "50dp"
         android:textSize="30dp"
         android:layout_marginTop="10dp"
         android:layout_centerInParent= "true"/>
