--- a/WeatherWithFriends/res/values/styles.xml
+++ b/WeatherWithFriends/res/values/styles.xml
@@ -24,6 +24,6 @@
 	</style>
 
 	<style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
-    	<item name="android:fontFamily">sans-serif-light</item>
+    	<item name="android:fontFamily">sans-condensed-bold</item>
 	</style>
 </resources>
